# dendrosolverbase

./: .gitignore  .gitmodules  .python-version  CMakeLists.txt  files_to_generate.txt  parameter_setup.toml
dendro/: CMakeLists.txt
dendro/FEM/include/: basis.h  feMat.h  feMatrix.h  feVec.h  feVector.h  interpMatrices.h  lapac.h  matvec.h  operators.h  refel.h  tensor.h  workspace.h
dendro/FEM/src/: basis.cpp  refel.cpp  tensor.cpp  workspace.cpp
dendro/Hilbert/src/: genHTables.cpp  sfcMatvecTable.cpp
dendro/IO/include/: rawIO.h  rawIO.tcc
dendro/IO/vtk/include/: cencode.h  checkPoint.h  oct2vtk.h
dendro/IO/vtk/src/: checkPoint.cpp  oct2vtk.cpp
dendro/LinAlg/include/: cg.h
dendro/NLSigma/include/: derivs.h  nlsm.h  nlsmCtx.h  nlsmUtils.h  parameters.h  profile_params.h  rhs.h  rk4nlsm.h
dendro/NLSigma/par/: nlsm_vis.py
dendro/NLSigma/src/: derivs.cpp  nlsm.cpp  nlsmCtx.cpp  nlsmUtils.cpp  nlsm_eqs.cpp  nlsm_nuts.cpp  parameters.cpp  profile_params.cpp  rhs.cpp  rk4nlsm.cpp
dendro/ODE/examples/: testLTSBlkVec.cpp  transportEq.cpp
dendro/ODE/include/: asyncCtxByLev.h  blkAsync.h  ctx.h  enuts.h  enutsOp.h  enutsUtils.tcc  ets.h  fdCoefficient.h  rk.h  rkMaxwell.h  rkTransport.h  rkTransportUtils.h  subSM.h  ts.h
dendro/ODE/src/: enutsOp.cpp  rk.cpp  rkMaxwell.cpp  rkTransport.cpp  subSM.cpp
dendro/include/: TreeNode.h  asyncExchangeContex.h  binUtils.h  block.h  cudaUtils.h  daUtils.h  daUtils.tcc  dendro.h  dendroIO.h  dendroProfileParams.h  dollar.hpp  dtypes.h  dvec.h  genPts_par.h  hcurvedata.h  key.h  matRecord.h  mathMeshUtils.h  mathUtils.h  mathUtils.tcc  memory_pool.h  mesh.h  mesh.tcc  meshE2NUtils.tcc  meshUtils.h  node.h  nufft.h  octUtils.h  oda.h  oda.tcc  odaUtils.h  ompUtils.h  ompUtils.tcc  parUtils.h  parUtils.tcc  point.h  pointT.h  profiler.h  radix.h  sc_flops.h  (+14 more)
dendro/include/cuda/: block_cu.h
dendro/src/: TreeNode.cpp  binUtils.cpp  block.cpp  cudaUtils.cpp  dendro.cpp  dendroIO.cpp  dendroProfileParams.cpp  genPts_par.cpp  hcurvedata.cpp  mesh.cpp  meshUtils.cpp  octFunctions.cpp  octUtils.cpp  oda.cpp  odaUtils.cpp  parUtils.cpp  point.cpp  profiler.cpp  sc_flops.cpp  sub_oda.cpp  treenode2vtk.cpp  waveletRefEl.cpp
dendro/test/include/: meshTestUtils.h  testUtils.h  testUtils.tcc
dendro/test/src/: meshTestUtils.cpp
generated-files/: solver_rhs_ko_deriv_calc.cpp.inc
solver/: CMakeLists.txt  solver_main.cpp
solver/include/: TPUtilities.h  TwoPunctures.h  bh.h  dataUtils.h  derivs.h  grDef.h  grUtils.h  grUtils.tcc  gwExtract.h  hadrhs.h  lebedev.h  parameters.h  physcon.h  profile_params.h  psi4.h  rhs.h  rkSolver.h  solverCtx.h  solver_constraints.h  solver_main.h  swsh.h
solver/src/: TPCoordTransf.cpp  TPEquations.cpp  TPFuncAndJacobian.cpp  TPNewton.cpp  TPUtilities.cpp  TwoPunctures.cpp  dataUtils.cpp  derivs.cpp  grUtils.cpp  hadrhs.F90  parameters.cpp  physcon.cpp  profile_params.cpp  rhs.cpp  rkSolver.cpp  solverCtx.cpp  solver_constraints.cpp
solver/src/initial_data_types/: boostedKerrSenInit.cpp  dyonicKerrNewmanInit.cpp  frankensteinInit.cpp  kerrInit.cpp  kerrSenInit.cpp  minkowskiInit.cpp  noiseInit.cpp  schwarzschildInit.cpp  superposedBoostedKerrSenInit.cpp
